--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,15 @@
     margin: auto;
     background-color: brown;
 }
+
+.expression-input{
+    width: 100%;
+    height: 30px;
+    background-color: #ffffff;
+}
+
+.resultat-input{
+    width: 100%;
+    height: 20px;
+    background-color: #ffffff;
+}
