--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App{
-    width: 240px;
+    width: 300px;
     margin: auto;
     background-color: brown;
     border-radius: 22px;
@@ -11,6 +11,7 @@
 
 .App-header h1 {
     text-align: center;
+    line-height: 55px;
     color: #ffffff;
 }
 
