--- a/src/components/Btn/Btn.css
+++ b/src/components/Btn/Btn.css
@@ -1,5 +1,5 @@
 .btn {
-    width: 45px;
+    width: 52px;
     background-color: #7fffd4;
     margin: 5px 5px 5px 0px;
     font-weight: bold;
@@ -7,17 +7,18 @@
 }
 
 button {
-    width: 45px;
-    height: 45px;
+    width: 52px;
+    height: 52px;
     opacity: 0.5;
     border-radius: 20%;
 }
 
 .btn-body{
-    max-width: 200px;
+    max-width: 250px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin: auto;
-    padding-bottom: 10px;
+    padding-top: 20px;
+    padding-bottom: 30px;
 }
