--- a/src/components/Btn/Btn.css
+++ b/src/components/Btn/Btn.css
@@ -22,3 +22,11 @@ button {
     padding-top: 20px;
     padding-bottom: 30px;
 }
+.btnEgal{
+    width: 110px;
+    position: relative;
+    bottom: -5px;
+    font-size: 30px;
+    border-radius: 10%;
+    background-color: rgb(251, 255, 0); 
+}
