--- a/src/components/Btn/Btn.css
+++ b/src/components/Btn/Btn.css
@@ -28,5 +28,5 @@ button {
     bottom: -5px;
     font-size: 30px;
     border-radius: 10%;
-    background-color: rgb(251, 255, 0); 
+    background-color: #fbff00; 
 }
