--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App{
     width: 300px;
     margin: auto;
-    background-color: brown;
+    background-color: #a52a2a;
     border-radius: 22px;
 }
 .App-header {
